--- a/week1/lec02_zw.Rmd
+++ b/week1/lec02_zw.Rmd
@@ -48,7 +48,7 @@ class: middle, center
 
 Like R, Python is a dynamically typed language but the implementation details are very different (as it makes extensive use of an object oriented class system for implementation, more on this later).
 
-Some of the core types,
+Some of the core types
 
 .pull-left[
 ```{python}
